[metadata]
name = superduperpancake
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = A OIDC Authentication Tester written for Openshift Origin
url = "https://github.com/liam-middlebrook/super-duper-pancake"
description-file = README.md
license = MIT
version = 1.0.1
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
